# blog

./: boost_log的编译问题
CMakeDemo/: CMakeLists.txt
CMakeDemo/src/: CMakeLists.txt
DesignPatterns/doc/: BuilderPattern.uxf  CommandPattern.uxf  DesignPatterns.md  FacadePattern.uxf  PrototypePattern.uxf  Proxy.uxf  Strategy.uxf  TemplateMethodPattern.uxf
DesignPatterns/src/: CMakeLists.txt  CommandPattern.cpp  FacadePattern.cpp  FactoryMethodPattern.cpp  ObserverPattern  ProducerConsumer.cpp  PrototypePattern.cpp  SimpleFactory.cpp  TemplateMethodPattern.cpp  callback.cpp
boost/: CMakeLists.txt
boost/include/: hello.h
boost/src/: CMakeLists.txt  boost_log.cpp  hello.cpp  main.cpp
muduo_note/: boost_note.md
opencv/: 测试一段代码运行时间.md  环境配置.md  （一）载入，显示和保存图像.md  （七.一）使用查找表修改图像外观.md  （七）遍历图像和邻域操作之图像锐化.md  （三）图像及像素.md  （九）直方图均衡化.md  （二）cv::Mat类.md  （五）存取像数值之椒盐噪点.md  （八）图像直方图.md  （六）遍历图像之减少颜色数目.md  （十一）颜色空间转换.md  （十七）滤波.md  （十三）形态学滤波对图像进行腐蚀和膨胀运算.md  （十九）使用高通滤波器检测边缘.md  （十二）二值图像.md  （十五）使用Canny算子检测轮廓.md  （十六）形态学滤波对图像进行开闭运算.md  （十四）形态学滤波进行图像边缘检测.md  （十）直方图检测特定图像的内容.md  （四）定义感兴趣区域.md  （零）环境配置.md
others/: Refactoring Improving the Design of Existing Code.md
python/: class.py  fibo.py  file.py  scope.py  str_zfill.p  url.py
python/Echo/: client.py  server.py
python/embedInC/: Makefile  highLevelEmbed.cpp  test
qt/: QFileDialog.md  QFont设置字体.md  QImage类.md  QKeyEvent键盘事件.md  QMouseEvent定义鼠标事件.md  QPaintEvent事件处理.md  QSqlDatabase数据库.md  QTableWidget.md  Qt中int转QString.md  atexit函数.md  layout布局.md  qt快捷键.md  利用QPalette设置背景颜色和图片.md  系统托盘QSystemTrayIcon.md  资源文件.md
(+2 files in other folders)
